# earthsandwich

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  ONBOARDING.md  README.md  docker-compose.db.yml  docker-compose.yml  index.html  package-lock.json  package.json  posts.local.tsv  posts.ourearthsandwich.local.tsv  posts.tsv  posts.welawen.local.tsv  travelmap-earth-club-sandwich.csv  travelmap-earth-sandwich.csv  wela-posts.txt
bridge-builder-toolkit/: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
bridge-builder-toolkit/analyze/: __init__.py  _iterations.py  introspect.py  pile.py  target.py
bridge-builder-toolkit/common/: __init__.py  config.py  inference.py  locking.py  playground.py  run_logging.py
bridge-builder-toolkit/design-intake/: README.md
bridge-builder-toolkit/design-intake/artifacts/: pile.enhanced.html  pile.ydata-profile.html  target.enhanced.html  target.ydata-profile.html
bridge-builder-toolkit/iterate/: __init__.py
bridge-builder-toolkit/oracle/: __init__.py
bridge-builder-toolkit/project/: __init__.py  create.py  delete.py  pile_scan.py  registry.py  secrets.py  status.py  update.py
bridge-builder-toolkit/review/: __init__.py
bridge-builder-toolkit/synthesize/: __init__.py
bridge-builder-toolkit/ui/: __init__.py  pages.py  server.py
pile-app/: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
pile-app/common/: __init__.py  anti_throttle.py  inference.py  pile.py  run_logging.py
pile-app/instagram/: deletion_detection.py  inferred_location.py  instagrapi_client.py  pipeline.py  rescrape_ramp.py  tagged_location.py
pile-app/substack/: archive_client.py  deletion_detection.py  pipeline.py  rss_client.py
pile-app/tests/: conftest.py
(+280 files in other folders)
