[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pile-app"
version = "0.1.0"
description = "Ingestion Pipeline App (pile-app) for the Earth Sandwich project. Segregated source-specific pipeline services that deposit raw artifacts into a local pile."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [
    { name = "Ethan Shen", email = "ethan@goworkinc.com" }
]
dependencies = [
    "instagrapi",
    "anthropic",
    "requests",
    "python-dotenv",
    "feedparser",
    "APScheduler",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
pile_app = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["instagram*", "substack*", "common*"]
exclude = ["instagram.validation*", "tests*", "pile*", "logs*"]
